Added Education + Styling

--- a/css/main.css
+++ b/css/main.css
@@ -226,17 +226,36 @@ nav {
 .projects .item .itemDetail {
   font-size: 1.1rem;
 }
+.projects .item .itemSection {
+  font-size: 1.1rem;
+  font-weight: bold;
+}
+.projects .item .itemType {
+  position: absolute;
+  left: 58%;
+  width: 12rem;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0vh, #ff7b53), to(#da2a13));
+  background: linear-gradient(180deg, #ff7b53 0vh, #da2a13 100%);
+  border-radius: 1.5vw;
+  text-align: right;
+  color: white;
+}
+.projects .item .itemType span {
+  display: block;
+  width: 100%;
+  text-align: center;
+}
 .projects .item ul {
   list-style: none;
   margin: 0;
-  padding: 0 2rem;
+  padding: 0 0 0 1rem;
 }
 .projects .item ul li {
   font-size: 1.1rem;
 }
 .projects .item ul li::before {
   content: "-";
-  padding-right: 1rem;
+  padding-right: 1.5rem;
 }
 .projects .item img {
   width: 100%;
