--- a/sass/main.sass
+++ b/sass/main.sass
@@ -210,16 +210,36 @@ nav
         .itemDetail
             font-size: 1.1rem
 
+        .itemSection
+            font-size: 1.1rem
+            font-weight: bold
+
+        .itemType
+            position: absolute
+            left: 58%
+            width: 12rem
+
+            background: linear-gradient(180deg, rgba(255,123,83,1) 0vh, rgba(218,42,19,1) 100%)
+            border-radius: 1.5vw
+
+            text-align: right
+            color: white
+
+        .itemType span
+            display: block
+            width: 100%
+            text-align: center
+
         ul
             list-style: none
             margin: 0
-            padding: 0 2rem
+            padding: 0 0 0 1rem
             li
                 font-size: 1.1rem
 
             li::before
                 content: "-"
-                padding-right: 1rem
+                padding-right: 1.5rem
 
         img
             width: 100%
