--- a/sass/main.sass
+++ b/sass/main.sass
@@ -193,10 +193,10 @@ nav
 
         filter: drop-shadow(-0.01vw 0.01vh 0.1vw $lightsolid)
 
-
         .itemTitle
             font-size: 2rem
             font-weight: 800
+            margin-top: 0.5rem
 
             display: block
 
@@ -216,19 +216,33 @@ nav
 
         .itemType
             position: absolute
-            left: 58%
-            width: 12rem
 
-            background: linear-gradient(180deg, rgba(255,123,83,1) 0vh, rgba(218,42,19,1) 100%)
-            border-radius: 1.5vw
-
-            text-align: right
-            color: white
-
-        .itemType span
-            display: block
+            top: 0.5rem
+            left: 0
             width: 100%
-            text-align: center
+
+            padding: 0
+            margin: 0
+
+            filter: none
+            display: flex
+            justify-content: flex-end
+            flex-grow: 1
+            div
+                width: auto
+                padding: 0 2rem
+                margin: 0 1rem
+
+                background: linear-gradient(180deg, rgba(255,123,83,1) 0vh, rgba(218,42,19,1) 100%)
+                border-radius: 1.5vw
+
+                text-align: right
+                color: white
+                span
+                    display: block
+                    width: auto
+                    text-align: center
+
 
         ul
             list-style: none
