Updated mobile style

--- a/css/main.css
+++ b/css/main.css
@@ -80,8 +80,8 @@ body {
   font-weight: 0;
 }
 .about .info, .aboutMin .info {
-  height: 30%;
-  width: 35vw;
+  height: auto;
+  width: 40rem;
   position: relative;
 }
 .about .info img, .aboutMin .info img {
@@ -105,7 +105,7 @@ body {
 }
 
 nav {
-  width: 70vw;
+  width: 70%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -119,8 +119,8 @@ nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 12vw;
-  height: 5vh;
+  width: 15rem;
+  height: 3.5rem;
   border-radius: 1.5vw;
   background: -webkit-gradient(linear, left top, left bottom, from(white), color-stop(75%, #ffcfb2));
   background: linear-gradient(180deg, white 0%, #ffcfb2 75%);
