--- a/sass/main.sass
+++ b/sass/main.sass
@@ -78,8 +78,8 @@ body
            font-weight: 0
 
     .info
-        height: 30%
-        width: 35vw
+        height: auto
+        width: 40rem
 
         position: relative
         img
@@ -107,7 +107,7 @@ body
             color: $darksolid
 
 nav
-    width: 70vw
+    width: 70%
 
     display: flex
     justify-content: space-around
@@ -118,8 +118,8 @@ nav
 .button
     display: flex
 
-    width: 12vw
-    height: 5vh
+    width: 15rem
+    height: 3.5rem
     border-radius: 1.5vw
 
     background: $lightbg
