--- a/sass/mobile.sass
+++ b/sass/mobile.sass
@@ -15,7 +15,7 @@ $lightsolid: white
         flex-direction: column
         padding: 0 1rem
         .name
-            font-size: 1.75rem
+            font-size: 2rem
             text-align: center
             h1
                 line-height: 3.5rem
@@ -62,7 +62,16 @@ $lightsolid: white
         gap: 2rem
 
         .item
-            border-radius: 3vw
+            border-radius: 5vw
+            padding: 0.25rem 0.5rem
+            padding-top: 1.4rem
+
+            .itemTitle
+                line-height: 2.5rem
+
+            .itemType
+                div
+                    border-radius: 10vw
 
         .button
             text-align: center
