Updated Portfolio with new projects and adjusted styling to be less busy

--- a/css/main.css
+++ b/css/main.css
@@ -194,6 +194,11 @@ nav {
       align-content: flex-start;
   gap: 2vw;
   margin-bottom: 10vh;
+  width: 85%;
+}
+.projects iframe {
+  padding-top: 1rem;
+  margin: 0 auto;
 }
 .projects .item {
   display: -webkit-box;
@@ -203,19 +208,21 @@ nav {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background: -webkit-gradient(linear, left top, left bottom, from(white), color-stop(75%, #ffcfb2));
-  background: linear-gradient(180deg, white 0%, #ffcfb2 75%);
+  outline: 0.3rem solid #ff7b53;
+  -webkit-box-shadow: inset 0 0 0.75rem black;
+          box-shadow: inset 0 0 0.75rem black;
   border-radius: 1.5vw;
   width: 30rem;
   height: auto;
   padding: 1vw;
-  -webkit-filter: drop-shadow(-0.01vw 0.01vh 0.1vw white);
-          filter: drop-shadow(-0.01vw 0.01vh 0.1vw white);
+  color: white;
 }
 .projects .item .itemTitle {
   font-size: 2rem;
   font-weight: 800;
   margin-top: 0.5rem;
+  -webkit-filter: none;
+          filter: none;
   display: block;
 }
 .projects .item .itemTime, .projects .item .itemJob {
@@ -223,13 +230,19 @@ nav {
   text-indent: 1vw;
   font-size: 1.1rem;
   font-style: italic;
+  -webkit-filter: none;
+          filter: none;
 }
 .projects .item .itemDetail {
   font-size: 1.1rem;
+  -webkit-filter: none;
+          filter: none;
 }
 .projects .item .itemSection {
   font-size: 1.1rem;
   font-weight: bold;
+  -webkit-filter: none;
+          filter: none;
 }
 .projects .item .itemType {
   position: absolute;
@@ -257,6 +270,8 @@ nav {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0vh, #ff7b53), to(#da2a13));
   background: linear-gradient(180deg, #ff7b53 0vh, #da2a13 100%);
   border-radius: 1.5vw;
+  -webkit-filter: none;
+          filter: none;
   text-align: right;
   color: white;
 }
