--- a/sass/main.sass
+++ b/sass/main.sass
@@ -189,6 +189,7 @@ nav
     .item
         display: flex
         flex-direction: column
+        position: relative
 
         outline: 0.3rem solid rgb(255, 123, 83)
         box-shadow: inset 0 0 0.75rem black
@@ -225,8 +226,9 @@ nav
 
         .itemType
             position: absolute
+            z-index: 1
 
-            top: 0.5rem
+            top: -0.78rem
             left: 0
             width: 100%
 
